[gd_scene load_steps=10 format=3 uid="uid://bu2eh6bntnl7q"]

[ext_resource type="Script" uid="uid://ofkpqbuwt4g3" path="res://main.gd" id="1_7mycd"]
[ext_resource type="Texture2D" uid="uid://cwbbehf2dy5uh" path="res://img/stand.svg" id="1_lquwl"]
[ext_resource type="Texture2D" uid="uid://ugbfuhwrwfpf" path="res://img/oval.svg" id="2_5vw27"]
[ext_resource type="Texture2D" uid="uid://4wb8bevpcky0" path="res://img/hit.svg" id="2_7mycd"]
[ext_resource type="AudioStream" uid="uid://cdc1yxg2dm212" path="res://sound/chipsCollide1.ogg" id="2_kek77"]
[ext_resource type="Texture2D" uid="uid://cki46fagb0uob" path="res://img/double.svg" id="3_272bh"]
[ext_resource type="Texture2D" uid="uid://3jrh6uj40657" path="res://img/split.svg" id="4_5vw27"]
[ext_resource type="Texture2D" uid="uid://cku8saigk67ak" path="res://img/A.svg" id="5_kek77"]
[ext_resource type="Texture2D" uid="uid://c0neefgd02jx3" path="res://img/100.svg" id="8_5vw27"]

[node name="Main" type="Node"]
script = ExtResource("1_7mycd")

[node name="sound" type="Node" parent="."]

[node name="chip" type="AudioStreamPlayer2D" parent="sound"]
position = Vector2(799, 268)
stream = ExtResource("2_kek77")

[node name="placeBet" type="Button" parent="."]
offset_left = 526.0
offset_top = 551.0
offset_right = 584.0
offset_bottom = 609.0
action_mode = 0
icon = ExtResource("2_5vw27")

[node name="chip100" type="Button" parent="."]
offset_left = 1005.0
offset_top = 493.0
offset_right = 1988.0
offset_bottom = 1476.0
scale = Vector2(0.05, 0.05)
icon = ExtResource("8_5vw27")

[node name="Balance" type="Label" parent="."]
offset_left = 1006.0
offset_top = 386.0
offset_right = 1046.0
offset_bottom = 409.0
text = "Balance"

[node name="Bet" type="Label" parent="."]
offset_left = 1006.0
offset_top = 433.0
offset_right = 1046.0
offset_bottom = 456.0
text = "Bet"

[node name="totalDealer" type="Label" parent="."]
visible = false
offset_left = 529.0
offset_top = 266.0
offset_right = 569.0
offset_bottom = 294.0
text = "0"

[node name="totalPlayer" type="Label" parent="."]
visible = false
offset_left = 533.0
offset_top = 486.0
offset_right = 573.0
offset_bottom = 509.0
text = "0"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="actions" type="Node" parent="."]

[node name="Stand" type="Button" parent="actions"]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 236.8
offset_top = 86.736
offset_right = 745.6
offset_bottom = 606.736
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 36
action_mode = 0
icon = ExtResource("1_lquwl")

[node name="Hit" type="Button" parent="actions"]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 382.8
offset_top = 83.736
offset_right = 845.6
offset_bottom = 676.736
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 36
action_mode = 0
icon = ExtResource("2_7mycd")

[node name="Double" type="Button" parent="actions"]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 544.8
offset_top = 87.736
offset_right = 1013.6
offset_bottom = 607.736
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 36
action_mode = 0
icon = ExtResource("3_272bh")

[node name="Split" type="Button" parent="actions"]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 757.8
offset_top = 84.7361
offset_right = 1242.6
offset_bottom = 604.736
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 36
action_mode = 0
icon = ExtResource("4_5vw27")

[node name="Insurance" type="Button" parent="actions"]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.718
anchor_right = 0.2
anchor_bottom = 0.718
offset_left = 284.8
offset_top = -65.264
offset_right = 561.6
offset_bottom = 454.736
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.15)
theme_override_font_sizes/font_size = 36
icon = ExtResource("5_kek77")
icon_alignment = 1
